fix: в методах equals & hashCode классов SubTask & Epic использован конструктор суперкласса style: переменная ID переименована в id refactor: Установка переменной id вынесена в метод setCommonId() fix: добавлен модификатор final полям класса InMemoryTaskManager fix: добавлена проверка на null в метод add() класса InMemoryHistoryManager fix: методу setStatusForEpics() присвоен модификатор доступа private fix: список history класса InMemoryHistoryManager изменен с ArrayList на LinkedList fix: возвращаемые значения методов получения списков задач / подзадач / эпиков изменены на List<Task> / List<SubTask> / List<Epic> fix: возвращаемое значение метода getHistoryManager() класса InMemoryHistoryManager изменено на List<Task>